--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1645,6 +1645,10 @@
     <string name="summary_font_size" translatable="false">%1$s</string>
     <!-- [CHAR LIMIT=40] Sound & display settings screen, title of dialog for picking font size -->
     <string name="dialog_title_font_size">Font size</string>
+    <!-- Sound & display settings screen, setting option name to change whether navigation bar is shown -->
+    <string name="navigation_bar_title">Enable/Disable Navigation Bar</string>
+    <!-- Sound & display settings screen, setting option summary to change whether navigation bar is shown -->
+    <string name="navigation_bar_summary">(Requires reboot)</string>
 
     <!-- SIM lock settings title -->
     <string name="sim_lock_settings">SIM card lock settings</string>
