--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1725,8 +1725,8 @@
     <!-- About phone screen,  setting option name-->
     <string name="build_number">Build number</string>
     <!-- About phone screen,  setting option name-->
-    <string name="mod_version">Mod version</string>
-    <string name="mod_version_default">Unknown</string>
+    <string name="mod_version">Playground ICS version</string>
+    <string name="mod_version_default">Undefined</string>
 
     <!-- About phone screen, show when a value of some status item is unavailable. -->
     <string name="device_info_not_available">Not available</string>
