--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -636,6 +636,8 @@
     <!-- Display settings --><skip/>
     <!-- Sound & display settings screen, section header for settings related to display -->
     <string name="display_settings">Display</string>
+    <!--  Sound & display settings screen, custom carrier text -->
+    <string name="carrier_text">Custom Carrier Text</string>
     <!-- Sound & display settings screen, accelerometer-based rotation check box label -->
     <string name="accelerometer_title">Auto-rotate screen</string>
     <!-- Sound & display settings screen, accelerometer-based rotation summary text when check box is selected -->
