Settings: 180 degree rotation option
Another AOKP setting that has been extracted from the "custom" settings
activity and integrated into the regular settings application. This
option allows the screen to rotate to match an inverted device. This
option is not practical, but fits into the ability to enable full 360
degree rotation.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -640,6 +640,8 @@
     <string name="carrier_text">Custom Carrier Text</string>
     <!-- Sound & display settings screen, accelerometer-based rotation check box label -->
     <string name="accelerometer_title">Auto-rotate screen</string>
+    <string name="rotate_180_title">Allow 180° rotation</string>
+    <string name="rotate_180_summary">Allow your device to rotate upsideown!</string>
     <!-- Sound & display settings screen, accelerometer-based rotation summary text when check box is selected -->
     <string name="accelerometer_summary_on" product="tablet">Switch orientation automatically when rotating tablet</string>
     <!-- Sound & display settings screen, accelerometer-based rotation summary text when check box is selected -->
