--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -709,6 +709,8 @@
     <string name="summary_font_size" translatable="false">%1$s</string>
     <!-- [CHAR LIMIT=40] Sound & display settings screen, title of dialog for picking font size -->
     <string name="dialog_title_font_size">Font size</string>
+    <!-- Display settings screen, battery light repeat pulsing title -->
+    <string name="battery_pulse_title">Pulse low battery light</string>
     <!-- Sound & display settings screen, setting option name to change whether navigation bar is shown -->
     <string name="navigation_bar_title">Enable/Disable Navigation Bar</string>
     <!-- Sound & display settings screen, setting option summary to change whether navigation bar is shown -->
