Settings: Custom carrier text in notification pulldown

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -747,6 +747,9 @@
     
     <!-- Notification Drawer #CM -->
     <string name="notification_drawer_title">Notification drawer</string>
+    <string name="carrier_text">Custom Carrier Text</string>
+    <string name="carrier_text_summary">Change the carrier text in notification pulldown. Requires a reboot.</string>
+    <string name="carrier_text_message">Change carrier text to:</string>
 
     <!-- Power Widget #CM -->
     <string name="power_widget_title">Power widget</string>
