--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -751,6 +751,11 @@
     <string name="carrier_text_summary">Change the carrier text in notification pulldown. Requires a reboot.</string>
     <string name="carrier_text_message">Change carrier text to:</string>
 
+    <!-- Combined Bar #CM -->
+    <string name="combined_bar_title">Combined bar</string>
+    <string name="combined_bar_auto_hide_title">Auto hide</string>
+    <string name="combined_bar_auto_hide_summary">Allow combined bar to hide when showing a fullscreen app</string>
+
     <!-- Power Widget #CM -->
     <string name="power_widget_title">Power widget</string>
     <string name="title_expanded_widget">Show power widget</string>
@@ -766,13 +771,13 @@
     <string name="title_widget_order">Widget button order</string>
     <string name="summary_widget_order">Select the order of the buttons in the power widget</string>
     <string name="title_buttons">Buttons</string>
-    <string name="title_toggle_wifi">Toggle Wifi</string>
+    <string name="title_toggle_wifi">Toggle Wi-Fi</string>
     <string name="title_toggle_bluetooth">Toggle Bluetooth</string>
     <string name="title_toggle_gps">Toggle GPS</string>
     <string name="title_toggle_sound">Toggle Sound</string>
     <string name="title_toggle_brightness">Toggle Brightness</string>
     <string name="title_toggle_sync">Toggle Sync</string>
-    <string name="title_toggle_wifiap">Toggle Wifi AP</string>
+    <string name="title_toggle_wifiap">Toggle Wi-Fi AP</string>
     <string name="title_toggle_screentimeout">Toggle Screentimeout</string>
     <string name="title_toggle_mobiledata">Toggle Mobiledata</string>
     <string name="title_toggle_lockscreen">Toggle Lockscreen</string>
@@ -805,15 +810,15 @@
     <string name="pref_flash_mode_summary">Choose High / Death Ray</string>
 
     <!-- Power Widget, Haptic feedback #CM -->
-    <string name="expanded_haptic_feedback_title">Haptic Feedback</string>
-    <string name="expanded_haptic_feedback_summary">Enable/Disable haptic feedback.</string>
+    <string name="expanded_haptic_feedback_title">Haptic feedback</string>
+    <string name="expanded_haptic_feedback_summary">Enable/disable haptic feedback</string>
 
     <!-- Status bar #CM -->
     <string name="status_bar_title">Status bar</string>
     <string name="status_bar_clock_title">Clock</string>
     <string name="status_bar_general_title">General</string>
     <string name="status_bar_show_clock_title">Show clock</string>
-    <string name="status_bar_show_clock_summary">Show the clock in the Status bar</string>
+    <string name="status_bar_show_clock_summary">Show the clock in the status bar</string>
     <string name="status_bar_am_pm_title">AM/PM style</string>
     <string name="status_bar_am_pm_summary">Display style of AM/PM next to clock</string>
     <string name="status_bar_battery_title">Battery status style</string>
@@ -2426,8 +2431,8 @@
     <!-- [CHAR_LIMIT=100] Security & location settings screen, setting check box summary for Google search -->
     <string name="use_location_summary">Let Google use your location to improve search results and other services</string>
     <!-- GPS Source selection -->
-    <string name="location_gps_source_title">GPS Source</string>
-    <string name="location_gps_source_summary">Use external bluetooth gps mouse instead of internal as location provider.</string>
+    <string name="location_gps_source_title">GPS source</string>
+    <string name="location_gps_source_summary">Use external bluetooth gps mouse instead of internal as location provider</string>
     <string name="location_gps_source_notification_title">Alert</string>
     <string name="location_gps_source_notification">GPS source has been switched! GPS will be disabled. Please re-enable before use!</string>
 
@@ -3004,10 +3009,10 @@ found in the list of installed apps.</string>
     <!-- Setting checkbox summary for Whether to enable USB debugging support on the phone -->
     <string name="enable_adb_summary">Allow Android debug mode, the adb interface on USB (or on network)</string>
     <!-- Setting checkbox title for Whether debugging should run over TCP/IP. -->
-    <string name="adb_over_network">ADB over Network</string>
-    <string name="adb_over_network_summary">Enable TCP/IP debugging over Network interfaces (Wi-Fi, Usb networks). This setting is reset on reboot</string>
+    <string name="adb_over_network">ADB over network</string>
+    <string name="adb_over_network_summary">Enable TCP/IP debugging over network interfaces (Wi-Fi, USB networks). This setting is reset on reboot</string>
     <!-- Warning for Adb over Network -->
-    <string name="adb_over_network_warning">WARNING: When ADB over Network is enabled, your phone is open for intrusions on all connected networks, including GSM data network !\n\nOnly use this feature when you are connected on trusted networks.\n\nDo you really want to enable this function?</string>
+    <string name="adb_over_network_warning">WARNING: When ADB over network is enabled, your phone is open for intrusions on all connected networks, including GSM data network !\n\nOnly use this feature when you are connected on trusted networks.\n\nDo you really want to enable this function?</string>
     <!-- Development settings: title for the field that shows the "App ID" development identifier
          for this device. [CHAR LIMIT=40] -->
     <string name="verifier_device_identifier">Development device ID</string>
@@ -4073,5 +4078,3 @@ found in the list of installed apps.</string>
     <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
 
 </resources>
-
-
