--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -633,6 +633,31 @@
     <!-- Volume description for alarm volume -->
     <string name="volume_alarm_description">Alarms</string>
 
+    <!-- Quiet hours #CM -->
+    <string name="quiet_hours_title">Quiet hours</string>
+    <string name="quiet_hours_summary">View or change the hours the device should be quiet</string>
+    <string name="quiet_hours_note_title">Note</string>
+    <string name="quiet_hours_note_summary">Incoming calls will behave like usual during quiet hours</string>
+    <string name="quiet_hours_enabled">Enable quiet hours</string>
+    <string name="quiet_hours_enabled_on">Quiet hours will be enforced</string>
+    <string name="quiet_hours_enabled_off">Notifications will function as normal</string>
+    <string name="quiet_hours_start">Start of quiet hours</string>
+    <string name="quiet_hours_start_summary">When to start enforcing quiet hours</string>
+    <string name="quiet_hours_end">End of quiet hours</string>
+    <string name="quiet_hours_end_summary">When to stop enforcing quiet hours</string>
+    <string name="quiet_hours_mute">Mute notifications</string>
+    <string name="quiet_hours_mute_on">No sounds will be played</string>
+    <string name="quiet_hours_mute_off">Sounds will play like normal</string>
+    <string name="quiet_hours_still">Disable vibrations</string>
+    <string name="quiet_hours_still_on">Device will not vibrate</string>
+    <string name="quiet_hours_still_off">Device will vibrate normally</string>
+    <string name="quiet_hours_dim">Disable notification light</string>
+    <string name="quiet_hours_dim_on">Notification light will be disabled</string>
+    <string name="quiet_hours_dim_off">Notification light will function as normal</string>
+    <string name="quiet_hours_haptic">Disable haptic feedback</string>
+    <string name="quiet_hours_haptic_on">Haptic feedback will be disabled</string>
+    <string name="quiet_hours_haptic_off">Haptic feedback will function as normal</string>
+
     <!-- Display settings --><skip/>
     <!-- Sound & display settings screen, section header for settings related to display -->
     <string name="display_settings">Display</string>
@@ -872,10 +897,115 @@
 <!-- PERSONAL Settings -->
     <!-- Settings main menu category heading. Personal (Accounts, security, language, backup...). [CHAR LIMIT=40] -->
     <string name="header_category_personal">PERSONAL</string>
-    
+
     <!-- Profiles settings #CM -->
     <string name="profiles_settings_title">Profiles</string>
-    
+    <string name="profiles_general_title">General</string>
+    <string name="profiles_add">Add</string>
+    <string name="profile_menu_delete">Delete</string>
+    <string name="profile_settings_title">Profile</string>
+
+    <!-- Add Profile -->
+    <string name="add_profile_dialog_title">Create new profile</string>
+    <string name="profile_name_title">Profile name</string>
+    <string name="profile_profile_name_prompt">Enter a name for the new profile</string>
+    <string name="menu_new_profile">New profile</string>
+    <string name="menu_new_profile_summary">Add and configure a new profile</string>
+
+    <!-- Rename Profile Dialog  -->
+    <string name="rename_profile_dialog_title">Rename profile</string>
+    <string name="duplicate_profile_name">Duplicate profile name!</string>
+
+    <!-- Message when trying to delete the active profile -->
+    <string name="profile_cannot_delete">You cannot delete the active profile</string>
+
+    <!-- Reset Profiles -->
+    <string name="profile_reset_title">Reset</string>
+    <string name="profile_reset_message">Do you want to delete all user created profiles and application groups and restore them to default?</string>
+
+    <!-- Default name of a new profile: "<new profile>" -->
+    <string name="new_profile_name">&lt;new profile&gt;</string>
+
+    <!-- Profile Config screen PreferenceGroup titles -->
+    <string name="profile_connectionoverrides_title">Connection overrides</string>
+    <string name="profile_connectionoverrides_summary">Touch to set enabled/disabled</string>
+    <string name="profile_volumeoverrides_title">Volume overrides</string>
+    <string name="profile_volumeoverrides_summary">Touch to set volume.</string>
+
+    <!-- Menu item for managing profiles -->
+    <string name="profile_profiles_manage">Profiles</string>
+    <string name="profile_profile_manage">Manage profile</string>
+    <string name="profile_applist_manage">Application list</string>
+    <string name="profile_appgroups_manage">Manage application groups</string>
+    <string name="profile_appgroup_manage">Profile</string>
+
+    <!-- Profile Settings sound mode label -->
+    <string name="sound_mode">Notification mode</string>
+    <string name="ringer_mode">Ring mode</string>
+    <string name="lights_mode">Lights mode</string>
+    <string name="vibrate_mode">Vibrate mode</string>
+    <string name="choose_soundtone">Choose notification tone</string>
+    <string name="choose_ringtone">Choose ringtone</string>
+
+    <!-- Profile settings screen, section header for settings related to notification profiles -->
+    <string name="profile_settings">Profile settings</string>
+    <string name="profile_name">Name</string>
+
+    <!-- Sound settings screen, setting option name to pick ringtone (a list dialog comes up)-->
+    <string name="soundtone_title">Notification tone</string>
+    <string name="soundtone_summary">""</string>
+
+    <!-- Title for application group setting screen -->
+    <string name="profile_appgroup_title">Application group: %s</string>
+    <string name="profile_appgroups_title">Application groups</string>
+    <string name="profile_applist_title">Applications</string>
+    <string name="profile_new_appgroup">New application group</string>
+    <string name="profile_delete_appgroup">Delete this application group</string>
+    <string name="profile_appgroup_name_prompt">Enter a name for the new application group</string>
+    <string name="profile_add_app">Add application</string>
+    <string name="profile_delete_app">Remove application</string>
+
+    <!-- Delete confimation message -->
+    <string name="profile_delete_confirm">Are you sure you want to delete this profile?</string>
+    <string name="profile_app_delete_confirm">Are you sure you want to remove this application?</string>
+
+    <!-- Add application dialog box title -->
+    <string name="profile_choose_app">Choose application</string>
+    <string name="profile_settings_header">Profile settings</string>
+
+    <string name="possibleButtons">Possible Buttons</string>
+    <string name="toggleWifi">Wi-Fi</string>
+    <string name="toggleWifiAp">Portable Wi-Fi hotspot</string>
+    <string name="toggleBluetooth">Bluetooth</string>
+    <string name="toggleGPS">GPS</string>
+    <string name="toggleData">Mobile Data</string>
+    <string name="toggleSync">Data Sync</string>
+    <string name="toggle2g3g">2G/3G</string>
+    <string name="toggleSound">Ring Mode</string>
+    <string name="toggleBrightness">Brightness</string>
+    <string name="toggleAutoRotate">Orientation</string>
+    <string name="toggleScreenTimeout">Screen Timeout</string>
+    <string name="toggleAirplane">Airplane</string>
+    <string name="toggleFlashlight">Flashlight</string>
+    <string name="toggleLockScreen">Lock Screen</string>
+    <string name="toggleWimax">WiMAX</string>
+
+    <string name="toggleWifiDescription">Enable/disable Wi-Fi</string>
+    <string name="toggleWifiApDescription">Enable/disable the portable Wi-Fi hotspot</string>
+    <string name="toggleBluetoothDescription">Enable/disable Bluetooth</string>
+    <string name="toggleGPSDescription">Enable/disable GPS</string>
+    <string name="toggleDataDescription">Enable/disable mobile data</string>
+    <string name="toggleSyncDescription">Enable/disable data sync</string>
+    <string name="toggle2g3gDescription">Switch between 2G and 3G</string>
+    <string name="toggleSoundDescription">Switch between ring and vibrate only</string>
+    <string name="toggleBrightnessDescription">Switch between brightness levels</string>
+    <string name="toggleAutoRotateDescription">Enable/disable orientation sensor</string>
+    <string name="toggleScreenTimeoutDescription">Set different screen timeouts</string>
+    <string name="toggleAirplaneDescription">Enable/disable airplane mode</string>
+    <string name="toggleFlashlightDescription">Enable/disable flashlight mode</string>
+    <string name="toggleLockScreenDescription">Enable/disable lock screen</string>
+    <string name="toggleWimaxDescription">Enable/disable WiMAX</string>
+
     <!-- Security Settings --><skip />
     <!-- Security settings screen when using face unlock, setting option name to start an activity that allows the user to improve accuracy by adding additional enrollment faces -->
     <string name="biometric_weak_improve_matching_title">Improve face matching</string>
@@ -1498,9 +1628,17 @@
 
     <!-- Anonymous Statistics #CM -->
     <!-- About device screen, list item title. Takes the user to the screen about opting in or out of anonymous statistics. -->
-    <string name="anonymous_statistics_settings_title">Anonymous statistics</string>
-    <!-- About device screen, list item summary. Takes the user to the screen about opting in or out of anonymous statistics. -->
-    <string name="anonymous_statistics_settings_summary">Help make CyanogenMod better by opting into anonymous statistics reporting</string>
+    <string name="anonymous_statistics_title">CyanogenMod Statistics</string>
+    <string name="anonymous_statistics_summary">Help make CyanogenMod better by opting into anonymous statistics reporting</string>
+    <string name="anonymous_statistics_warning_title">About</string>
+    <string name="anonymous_statistics_warning">Opting into CyanogenMod Statistics will allow non-personal data to be submitted to the
+        developers of CyanogenMod to track unique installations across devices. The information submitted includes an unique identifier,
+        which does not compromise your privacy or personal data. The data is submitted during each boot.\n\nFor an example of the data that is submitted, tap on Preview Data.</string>
+    <string name="enable_reporting_title">Enable reporting</string>
+    <string name="preview_data_title">Preview data</string>
+    <string name="preview_data_summary">%s</string>
+    <string name="view_stats_title">View stats</string>
+    <string name="anonymous_learn_more">Learn more</string>
 
     <!-- About device screen, model of device. -->
     <string name="model_number">Model number</string>
@@ -2051,6 +2189,7 @@
 
     <!-- Button label for generic cancel action -->
     <string name="cancel">Cancel</string>
+    <string name="ok">Ok</string>
 
     <!-- Title of the Settings activity shown within the application itself. -->
     <string name="settings_label">Settings</string>
@@ -2454,9 +2593,9 @@
     <string name="use_location_summary">Let Google use your location to improve search results and other services</string>
     <!-- GPS Source selection -->
     <string name="location_gps_source_title">GPS source</string>
-    <string name="location_gps_source_summary">Use external bluetooth gps mouse instead of internal as location provider</string>
+    <string name="location_gps_source_summary">Choose to use either an external Bluetooth GPS antenna or the internal GPS antenna as location provider</string>
     <string name="location_gps_source_notification_title">Alert</string>
-    <string name="location_gps_source_notification">GPS source has been switched! GPS will be disabled. Please re-enable before use!</string>
+    <string name="location_gps_source_notification">The GPS source has been switched! GPS will be disabled. Please re-enable before use!</string>
 
     <!-- About --> <skip />
     <!-- Main settings screen, setting title for the user to go into the About phone screen -->
