--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -914,26 +914,27 @@
     <string name="profile_profile_name_prompt">Enter a name for the new profile</string>
     <string name="menu_new_profile">New profile</string>
     <string name="menu_new_profile_summary">Add and configure a new profile</string>
+    <string name="new_profile_name">&lt;new profile&gt;</string>
 
     <!-- Rename Profile Dialog  -->
     <string name="rename_profile_dialog_title">Rename profile</string>
     <string name="duplicate_profile_name">Duplicate profile name!</string>
 
-    <!-- Message when trying to delete the active profile -->
-    <string name="profile_cannot_delete">You cannot delete the active profile</string>
-
     <!-- Reset Profiles -->
     <string name="profile_reset_title">Reset</string>
     <string name="profile_reset_message">Do you want to delete all user created profiles and application groups and restore them to default?</string>
 
-    <!-- Default name of a new profile: "<new profile>" -->
-    <string name="new_profile_name">&lt;new profile&gt;</string>
+    <!-- Delete confimation messages -->
+    <string name="profile_delete_confirm">Are you sure you want to delete this profile?</string>
+    <string name="profile_app_delete_confirm">Are you sure you want to remove this application?</string>
+    <string name="profile_cannot_delete">You cannot delete the active profile</string>
 
     <!-- Profile Config screen PreferenceGroup titles -->
     <string name="profile_connectionoverrides_title">Connection overrides</string>
-    <string name="profile_connectionoverrides_summary">Touch to set enabled/disabled</string>
     <string name="profile_volumeoverrides_title">Volume overrides</string>
-    <string name="profile_volumeoverrides_summary">Touch to set volume.</string>
+    <string name="connection_state_disabled">Disable</string>
+    <string name="connection_state_enabled">Enable</string>
+    <string name="volume_override_summary">Set to</string>
 
     <!-- Menu item for managing profiles -->
     <string name="profile_profiles_manage">Profiles</string>
@@ -942,17 +943,17 @@
     <string name="profile_appgroups_manage">Manage application groups</string>
     <string name="profile_appgroup_manage">Profile</string>
 
-    <!-- Profile Settings sound mode label -->
+    <!-- Profile settings screen, section header for settings related to notification profiles -->
+    <string name="profile_settings">Profile settings</string>
+    <string name="profile_name">Name</string>
+
+    <!-- Profile Settings sound modes labels -->
     <string name="sound_mode">Notification mode</string>
     <string name="ringer_mode">Ring mode</string>
     <string name="lights_mode">Lights mode</string>
     <string name="vibrate_mode">Vibrate mode</string>
     <string name="choose_soundtone">Choose notification tone</string>
     <string name="choose_ringtone">Choose ringtone</string>
-
-    <!-- Profile settings screen, section header for settings related to notification profiles -->
-    <string name="profile_settings">Profile settings</string>
-    <string name="profile_name">Name</string>
 
     <!-- Sound settings screen, setting option name to pick ringtone (a list dialog comes up)-->
     <string name="soundtone_title">Notification tone</string>
@@ -968,14 +969,11 @@
     <string name="profile_add_app">Add application</string>
     <string name="profile_delete_app">Remove application</string>
 
-    <!-- Delete confimation message -->
-    <string name="profile_delete_confirm">Are you sure you want to delete this profile?</string>
-    <string name="profile_app_delete_confirm">Are you sure you want to remove this application?</string>
-
     <!-- Add application dialog box title -->
     <string name="profile_choose_app">Choose application</string>
     <string name="profile_settings_header">Profile settings</string>
 
+    <!-- Connection override toggles (not all are used at this time ) -->
     <string name="possibleButtons">Possible Buttons</string>
     <string name="toggleWifi">Wi-Fi</string>
     <string name="toggleWifiAp">Portable Wi-Fi hotspot</string>
@@ -992,22 +990,6 @@
     <string name="toggleFlashlight">Flashlight</string>
     <string name="toggleLockScreen">Lock Screen</string>
     <string name="toggleWimax">WiMAX</string>
-
-    <string name="toggleWifiDescription">Enable/disable Wi-Fi</string>
-    <string name="toggleWifiApDescription">Enable/disable the portable Wi-Fi hotspot</string>
-    <string name="toggleBluetoothDescription">Enable/disable Bluetooth</string>
-    <string name="toggleGPSDescription">Enable/disable GPS</string>
-    <string name="toggleDataDescription">Enable/disable mobile data</string>
-    <string name="toggleSyncDescription">Enable/disable data sync</string>
-    <string name="toggle2g3gDescription">Switch between 2G and 3G</string>
-    <string name="toggleSoundDescription">Switch between ring and vibrate only</string>
-    <string name="toggleBrightnessDescription">Switch between brightness levels</string>
-    <string name="toggleAutoRotateDescription">Enable/disable orientation sensor</string>
-    <string name="toggleScreenTimeoutDescription">Set different screen timeouts</string>
-    <string name="toggleAirplaneDescription">Enable/disable airplane mode</string>
-    <string name="toggleFlashlightDescription">Enable/disable flashlight mode</string>
-    <string name="toggleLockScreenDescription">Enable/disable lock screen</string>
-    <string name="toggleWimaxDescription">Enable/disable WiMAX</string>
 
     <!-- Security Settings --><skip />
     <!-- Security settings screen when using face unlock, setting option name to start an activity that allows the user to improve accuracy by adding additional enrollment faces -->
