--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -633,31 +633,6 @@
     <!-- Volume description for alarm volume -->
     <string name="volume_alarm_description">Alarms</string>
 
-    <!-- Quiet hours #CM -->
-    <string name="quiet_hours_title">Quiet hours</string>
-    <string name="quiet_hours_summary">View or change the hours the device should be quiet</string>
-    <string name="quiet_hours_note_title">Note</string>
-    <string name="quiet_hours_note_summary">Incoming calls will behave like usual during quiet hours</string>
-    <string name="quiet_hours_enabled">Enable quiet hours</string>
-    <string name="quiet_hours_enabled_on">Quiet hours will be enforced</string>
-    <string name="quiet_hours_enabled_off">Notifications will function as normal</string>
-    <string name="quiet_hours_start">Start of quiet hours</string>
-    <string name="quiet_hours_start_summary">When to start enforcing quiet hours</string>
-    <string name="quiet_hours_end">End of quiet hours</string>
-    <string name="quiet_hours_end_summary">When to stop enforcing quiet hours</string>
-    <string name="quiet_hours_mute">Mute notifications</string>
-    <string name="quiet_hours_mute_on">No sounds will be played</string>
-    <string name="quiet_hours_mute_off">Sounds will play like normal</string>
-    <string name="quiet_hours_still">Disable vibrations</string>
-    <string name="quiet_hours_still_on">Device will not vibrate</string>
-    <string name="quiet_hours_still_off">Device will vibrate normally</string>
-    <string name="quiet_hours_dim">Disable notification light</string>
-    <string name="quiet_hours_dim_on">Notification light will be disabled</string>
-    <string name="quiet_hours_dim_off">Notification light will function as normal</string>
-    <string name="quiet_hours_haptic">Disable haptic feedback</string>
-    <string name="quiet_hours_haptic_on">Haptic feedback will be disabled</string>
-    <string name="quiet_hours_haptic_off">Haptic feedback will function as normal</string>
-
     <!-- Display settings --><skip/>
     <!-- Sound & display settings screen, section header for settings related to display -->
     <string name="display_settings">Display</string>
@@ -897,36 +872,41 @@
 <!-- PERSONAL Settings -->
     <!-- Settings main menu category heading. Personal (Accounts, security, language, backup...). [CHAR LIMIT=40] -->
     <string name="header_category_personal">PERSONAL</string>
+    
 
-    <!-- Profiles settings #CM -->
+	<!-- THIS NEEDS MAJOR CLEANUP - START -->    
+	<!-- Profiles settings #CM -->
     <string name="profiles_settings_title">Profiles</string>
     <string name="profiles_general_title">General</string>
-    <string name="profiles_add">Add</string>
-    <string name="profile_menu_delete">Delete</string>
-    <string name="profile_settings_title">Profile</string>
 
-    <!-- Add Profile -->
+	<!-- probably not used --> 
+    <!-- Main Settings screen setting option name to go into the profile settings screen -->
+    <string name="profile_settings_title">Profile</string>
+    <!-- Sound settings screen, setting option name to pick ringtone (a list dialog comes up)-->
+    <string name="soundtone_title">Notification tone</string>
+    <!-- Sound settings screen, setting option summary text -->
+    <string name="soundtone_summary">""</string>
+	<!-- probably not used --> 
+
+    <string name="ok">Ok</string>
+
+    <!-- Profiles Settings screen --><skip/>
+    <!-- Profiles Settings add profile title -->
+    <string name="profiles_add">Add</string>
+
+    <!-- Add Profile Dialog  -->
     <string name="add_profile_dialog_title">Create new profile</string>
     <string name="profile_name_title">Profile name</string>
-    <string name="profile_profile_name_prompt">Enter a name for the new profile</string>
-    <string name="menu_new_profile">New profile</string>
-    <string name="menu_new_profile_summary">Add and configure a new profile</string>
+    <string name="profile_type_title">Profile type</string>
+    <string name="conditional_profile_type">Conditional profile</string>
+    <string name="toggle_profile_type">User toggle profile</string>
 
     <!-- Rename Profile Dialog  -->
     <string name="rename_profile_dialog_title">Rename profile</string>
     <string name="duplicate_profile_name">Duplicate profile name!</string>
 
-    <!-- Message when trying to delete the active profile -->
-    <string name="profile_cannot_delete">You cannot delete the active profile</string>
-
-    <!-- Reset Profiles -->
-    <string name="profile_reset_title">Reset</string>
-    <string name="profile_reset_message">Do you want to delete all user created profiles and application groups and restore them to default?</string>
-
-    <!-- Default name of a new profile: "<new profile>" -->
-    <string name="new_profile_name">&lt;new profile&gt;</string>
-
     <!-- Profile Config screen PreferenceGroup titles -->
+    <string name="profile_conditions_title">System triggers</string>
     <string name="profile_connectionoverrides_title">Connection overrides</string>
     <string name="profile_connectionoverrides_summary">Touch to set enabled/disabled</string>
     <string name="profile_volumeoverrides_title">Volume overrides</string>
@@ -949,29 +929,61 @@
 
     <!-- Profile settings screen, section header for settings related to notification profiles -->
     <string name="profile_settings">Profile settings</string>
-    <string name="profile_name">Name</string>
-
-    <!-- Sound settings screen, setting option name to pick ringtone (a list dialog comes up)-->
-    <string name="soundtone_title">Notification tone</string>
-    <string name="soundtone_summary">""</string>
-
+    <string name="profile_name">Profile name</string>
+    <!-- Default name of a new profile: "<new profile>" -->
+    <string name="new_profile_name">&lt;new profile&gt;</string>
+    <!-- Profile summary - hint that touching configures profile -->
+    <string name="profile_summary">Touch to configure profile</string>
+    <!-- If the logo should be displayed in the status bar, setting caption -->
+    <string name="profile_statusbar">Status Bar Indicator</string>
     <!-- Title for application group setting screen -->
     <string name="profile_appgroup_title">Application group: %s</string>
+    <!-- Title for application group list screen -->
     <string name="profile_appgroups_title">Application groups</string>
+    <!-- Title for application group list section, hint at delete action -->
     <string name="profile_applist_title">Applications</string>
-    <string name="profile_new_appgroup">New application group</string>
-    <string name="profile_delete_appgroup">Delete this application group</string>
+    <!-- Prompt for name when adding a new app group -->
     <string name="profile_appgroup_name_prompt">Enter a name for the new application group</string>
-    <string name="profile_add_app">Add application</string>
-    <string name="profile_delete_app">Remove application</string>
-
-    <!-- Delete confimation message -->
+    <!-- Prompt for name when adding a new app group -->
+    <string name="profile_profile_name_prompt">Enter a name for the new profile</string>
+    <!-- Cancel creating a new profile -->
+    <string name="profile_delete">Delete</string>
+    <!-- Cancel creating a new profile -->
+    <string name="profile_done">Done</string>
+    <!-- Delete profile confimation message -->
     <string name="profile_delete_confirm">Are you sure you want to delete this profile?</string>
+    <!-- Delete application from group confirm message -->
     <string name="profile_app_delete_confirm">Are you sure you want to remove this application?</string>
-
     <!-- Add application dialog box title -->
     <string name="profile_choose_app">Choose application</string>
+    <!-- Title for profile settings screen -->
     <string name="profile_settings_header">Profile settings</string>
+    <!-- Profile category settings heading -->
+    <string name="profile_group_header">Profile: %1$s category: %2$s</string>
+    <!-- Menu item for managing app groups -->
+    <string name="menu_appgroups">Manage app groups</string>
+    <!-- Menu item for adding a new profile -->
+    <string name="menu_new_profile">New profile</string>
+    <!-- Menu item for adding a new profile - summary -->
+    <string name="menu_new_profile_summary">Add and configure a new profile</string>
+    <!-- Delete an item context menu item -->
+    <string name="profile_menu_delete">Delete</string>
+    <!-- Message when trying to delete the active profile -->
+    <string name="profile_cannot_delete">You cannot delete the active profile</string>
+    <!-- Menu item for adding a new app group -->
+    <string name="profile_new_appgroup">New application group</string>
+    <!-- Menu item for deleting an app group -->
+    <string name="profile_delete_appgroup">Delete this application group</string>
+    <!-- Menu item for adding an app -->
+    <string name="profile_add_app">Add application</string>
+    <!-- Menu item for deleting an app -->
+    <string name="profile_delete_app">Remove application</string>
+    <!-- Menu item for reset -->
+    <string name="profile_reset_title">Reset</string>
+    <!-- Menu item for reset all -->
+    <string name="profile_reset_all_title">Reset all</string>
+    <!-- Dialog confirming reset all - message -->
+    <string name="profile_reset_all_message">Do you want to delete all user created profiles and application groups and restore them to default?</string>
 
     <string name="possibleButtons">Possible Buttons</string>
     <string name="toggleWifi">Wi-Fi</string>
@@ -1005,7 +1017,10 @@
     <string name="toggleFlashlightDescription">Enable/disable flashlight mode</string>
     <string name="toggleLockScreenDescription">Enable/disable lock screen</string>
     <string name="toggleWimaxDescription">Enable/disable WiMAX</string>
+ 
+	<!-- THIS NEEDS MAJOR CLEANUP - END -->    
 
+    
     <!-- Security Settings --><skip />
     <!-- Security settings screen when using face unlock, setting option name to start an activity that allows the user to improve accuracy by adding additional enrollment faces -->
     <string name="biometric_weak_improve_matching_title">Improve face matching</string>
@@ -2181,7 +2196,6 @@
 
     <!-- Button label for generic cancel action -->
     <string name="cancel">Cancel</string>
-    <string name="ok">Ok</string>
 
     <!-- Title of the Settings activity shown within the application itself. -->
     <string name="settings_label">Settings</string>
@@ -2585,9 +2599,9 @@
     <string name="use_location_summary">Let Google use your location to improve search results and other services</string>
     <!-- GPS Source selection -->
     <string name="location_gps_source_title">GPS source</string>
-    <string name="location_gps_source_summary">Choose to use either an external Bluetooth GPS antenna or the internal GPS antenna as location provider</string>
+    <string name="location_gps_source_summary">Use external bluetooth gps mouse instead of internal as location provider</string>
     <string name="location_gps_source_notification_title">Alert</string>
-    <string name="location_gps_source_notification">The GPS source has been switched! GPS will be disabled. Please re-enable before use!</string>
+    <string name="location_gps_source_notification">GPS source has been switched! GPS will be disabled. Please re-enable before use!</string>
 
     <!-- About --> <skip />
     <!-- Main settings screen, setting title for the user to go into the About phone screen -->
