Cleanup strings to support "click to" description vs. current

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4325,12 +4325,12 @@ found in the list of installed apps.</string>
     <!-- Sound & display settings screen, compatibility mode check box label -->
     <string name="compatibility_mode_title">Compatibility Mode</string>
     <!-- Sound & display settings screen, compatibility mode option summary text when check box is selected -->
-    <string name="compatibility_mode_summary_on">Run apps in Compatibility mode. This require rebooting. </string>
+    <string name="compatibility_mode_summary_off">Run apps in Compatibility mode. This require rebooting.</string>
     <!-- Sound & display settings screen, compatibility mode option summary text when check box is clear -->
-    <string name="compatibility_mode_summary_off">Turn off compatibility mode to allow app layouts</string>
+    <string name="compatibility_mode_summary_on">Turn off compatibility mode to allow app layouts</string>
 
     <string name="dual_pane_title">Dual-panel layout</string>
-    <string name="dual_pane_summary">Side-by-side menu display for applications that provide a dual-pane preference</string>
+    <string name="dual_pane_summary">Side-by-side display for apps that provide a dual-pane option</string>
 
     <!-- A menu item in "About phone" that allows the user to update the phone with settings
     from their cell phone carrier. The use of the string is similar to the string
