Move custom settings panel to separate top-level directory
Some days I miss Eclipse for the syntax highlighting.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -795,7 +795,8 @@
     
     <!-- Notification Drawer #CM -->
     <string name="notification_drawer_title">Notifications</string>
-    <string name="carrier_text">Custom Carrier Text</string>
+    <string name="carrier_text_title">Modify Carrier Text</string>
+    <string name="carrier_text_heading">Custom Carrier Text</string>
     <string name="carrier_text_summary">Change the carrier text in notification pulldown. Requires a reboot.</string>
     <string name="carrier_text_message">Change carrier text to:</string>
 
