--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -832,6 +832,10 @@
 
     <string name="install_location_title">Install Location</string>
     <string name="install_location_summary">Choose install target for user applications</string>
+
+    <string name="shutter_sound_title">Camera Sounds</string>
+    <string name="shutter_sound_summary_off">Allow shutter sounds in Camera / Camcorder</string>
+    <string name="shutter_sound_summary_on">Prevent shutter sounds in Camera / Camcorder</string>
     
     <string name="pref_automatic_loc">Automatic</string>
     <string name="pref_internal_loc">Internal</string>
